--- a/VisualStudio/Hatchling.vcxproj
+++ b/VisualStudio/Hatchling.vcxproj
@@ -22,13 +22,14 @@
     <None Include="..\.editorconfig" />
     <None Include="..\.gitattributes" />
     <None Include="..\.gitignore" />
-    <None Include="..\profile.json" />
     <None Include="..\test.sh" />
+    <None Include="profile.json" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\CONTRIBUTORS.txt" />
     <Text Include="..\LICENSE.txt" />
     <Text Include="..\README.txt" />
+    <Text Include="log.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\hatchling.cpp" />
@@ -41,13 +42,15 @@
     <ClCompile Include="..\hxFile.cpp" />
     <ClCompile Include="..\hxFileTest.cpp" />
     <ClCompile Include="..\hxHashTableTest.cpp" />
+    <ClCompile Include="..\hxStringHash.cpp" />
+    <ClCompile Include="..\hxStringHashTest.cpp" />
     <ClCompile Include="..\hxTestMain.cpp" />
     <ClCompile Include="..\hxMemoryManager.cpp" />
     <ClCompile Include="..\hxMemoryManagerTest.cpp" />
     <ClCompile Include="..\hxProfiler.cpp" />
     <ClCompile Include="..\hxProfilerTest.cpp" />
-    <ClCompile Include="..\hxRadixSort.cpp" />
-    <ClCompile Include="..\hxRadixSortTest.cpp" />
+    <ClCompile Include="..\hxSort.cpp" />
+    <ClCompile Include="..\hxSortTest.cpp" />
     <ClCompile Include="..\hxSettings.cpp" />
     <ClCompile Include="..\hxTaskQueue.cpp" />
     <ClCompile Include="..\hxTaskQueueTest.cpp" />
@@ -57,6 +60,7 @@
     <ClInclude Include="..\hxAllocator.h" />
     <ClInclude Include="..\hxArray.h" />
     <ClInclude Include="..\hxConsole.h" />
+    <ClInclude Include="..\hxConsoleInternal.h" />
     <ClInclude Include="..\hxDma.h" />
     <ClInclude Include="..\hxFile.h" />
     <ClInclude Include="..\hxHashTable.h" />
@@ -64,9 +68,10 @@
     <ClInclude Include="..\hxHashTableNodes.h" />
     <ClInclude Include="..\hxMemoryManager.h" />
     <ClInclude Include="..\hxProfiler.h" />
-    <ClInclude Include="..\hxRadixSort.h" />
+    <ClInclude Include="..\hxSort.h" />
     <ClInclude Include="..\hxSettings.h" />
     <ClInclude Include="..\hxStockpile.h" />
+    <ClInclude Include="..\hxStringHash.h" />
     <ClInclude Include="..\hxTaskQueue.h" />
     <ClInclude Include="..\hxTest.h" />
     <ClInclude Include="..\hxTestPRNG.h" />
@@ -143,7 +148,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>HX_HAS_64_BIT_TYPES=0;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>false</ExceptionHandling>
       <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
@@ -158,7 +163,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>HX_HAS_64_BIT_TYPES=1;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>false</ExceptionHandling>
       <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
@@ -173,7 +178,7 @@
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>HX_HAS_64_BIT_TYPES=0;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
@@ -198,7 +203,7 @@
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>HX_HAS_64_BIT_TYPES=1;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
