--- a/VisualStudio/Hatchling.vcxproj.filters
+++ b/VisualStudio/Hatchling.vcxproj.filters
@@ -61,13 +61,13 @@
     <ClCompile Include="..\test\hxArrayTest.cpp">
       <Filter>test</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\hxCUtils.c">
-      <Filter>test</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\hxTestMain.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\src\printf.c">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\hxCUtils.c">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -145,14 +145,17 @@
     <None Include="..\etc\profile.json">
       <Filter>etc</Filter>
     </None>
-    <None Include="..\.gitignore" />
     <None Include="..\etc\coverage.sh">
       <Filter>etc</Filter>
     </None>
     <None Include="..\.travis.yml" />
+    <None Include="..\README.md" />
+    <None Include="..\etc\coverage.md">
+      <Filter>etc</Filter>
+    </None>
+    <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\README.txt" />
     <Text Include="..\etc\CONTRIBUTORS.txt">
       <Filter>etc</Filter>
     </Text>
@@ -161,9 +164,6 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="etc">
-      <UniqueIdentifier>{f018f69f-8d51-4c00-94ef-b3064c6a7480}</UniqueIdentifier>
-    </Filter>
     <Filter Include="test">
       <UniqueIdentifier>{3d071560-7084-4c50-881d-3b3ee065e990}</UniqueIdentifier>
     </Filter>
@@ -172,6 +172,9 @@
     </Filter>
     <Filter Include="include/hx\internal">
       <UniqueIdentifier>{532f28cf-a317-43a1-a22d-989bcb590968}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="etc">
+      <UniqueIdentifier>{f018f69f-8d51-4c00-94ef-b3064c6a7480}</UniqueIdentifier>
     </Filter>
     <Filter Include="src">
       <UniqueIdentifier>{1d99ce56-607d-4056-9425-35f06bc7492c}</UniqueIdentifier>
