--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "printf"]
 	path = printf
-	url = https://github.com/mpaland/printf
-	branch = master
+	url = https://github.com/mpaland/printf.git
