remove etc directory

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++ build active file",
-            "command": "./etc/debugbuild.sh",
+            "command": "./debugbuild.sh",
             "args": [
             ],
             "options": {
